<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.florianlallier.notaresto.MainActivity">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_menu_search" />

    <item
        android:id="@+id/menu_advanced_search"
        android:title="@string/menu_advanced_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        app:showAsAction="never" />

</menu>
